# spec-s5-instrument

./: LICENSE  README.md  pyproject.toml
notebooks/: SpecS5_SNR_ETC.ipynb  measurement_errors_demo.ipynb  mock_observations_demo.ipynb
spec5/instrument/: __init__.py  fiber.py  mock_observations.py  photometry.py  stellar_etc.py
spec5/instrument/data/: DECamnew_z.bp  GAIA_DR5.csv  LSST10_DECAM.csv  LSST1_DECAM.csv  dist_err_vs_snr_dwarf.csv  dist_err_vs_snr_giant.csv
spec_s5_instrument/: __init__.py  etc.py
spec_s5_instrument/data/: GAIA_DR5.csv  LSST1_DECAM.csv
tests/: test_compute_measurement_errors.py  test_compute_snr.py  test_mock_observations.py  test_photometry.py
